Add setup agent and setup-custom agent
Setup agent runs setup skill (show hidden files, MCP servers, config) then setup-custom agent. Setup-custom runs .claude/setup/custom.md if present (gitignored). README setup slimmed to point to setup agent; .gitignore custom.md.

Made-with: Cursor

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,6 @@ desktop.ini
 # npm
 node_modules/
 package-lock.json
+
+# Custom setup (user- or machine-specific; does not sync)
+.claude/setup/custom.md
